Create a header for our status'

--- a/instagramApp/templates/timelines.html
+++ b/instagramApp/templates/timelines.html
@@ -9,6 +9,7 @@
       {% for image in images %}
       <div class="well" style="background-color:white; margin-bottom:70px">
         <header>
+          <!-- Replace with profile picture -->
           <img src="{{image.image.url}}" alt="" style="height:50px;width:50px; border-radius:50%">
           <p style="display:inline; margin-left:10px; font-weight:bolder; font-size:16px">{{image.user}}</p>
         </header>
@@ -66,7 +67,7 @@
       {% for image in images %}
       <div class="well" style="background-color:white">
         <header>
-          <img src="https://static.pexels.com/photos/34950/pexels-photo.jpg" alt="" style="height:50px;width:50px; border-radius:50%">
+          <img src="https://images.pexels.com/photos/417230/pexels-photo-417230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" style="height:50px;width:50px; border-radius:50%">
           <p style="display:inline; margin-left:10px; font-weight:bolder; font-size:16px">{{image.user}}</p>
         </header>
         <img src="{{image.image.url}}" class="img-responsive">
